<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TreeRegistration">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddVisits"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/CustomToolBarStyle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="@dimen/textSize"
                android:layout_marginTop="2dp"
                />

            <RadioGroup
                android:layout_marginTop="2dp"
                android:id="@+id/rgTreeType"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rdFruit"
                    android:text="@string/fruit"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rdExotic"
                    android:text="@string/exotic"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rdIndigenous"
                    android:text="@string/indigenous"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </RadioGroup>

            <LinearLayout
                android:id="@+id/llTreeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                >

                <TextView
                    android:id="@+id/tvTreeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_name"
                    android:textSize="@dimen/textSize"
                    />

                <Spinner
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:id="@+id/spTreeName"
                    android:layout_width="0dp"
                    android:textSize="@dimen/textSize"
                    android:layout_marginStart="2dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />
            </LinearLayout>


            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="2dp"-->
            <!--                android:textSize="@dimen/textSize"-->
            <!--                >-->
            <!--                <androidx.appcompat.widget.AppCompatEditText-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:hint="Tree Status"-->
            <!--                    android:textSize="@dimen/textSize"-->
            <!--                    android:id="@+id/etTreeStatus"-->
            <!--                    android:inputType="textCapWords"-->
            <!--                    />-->
            <!--            </com.google.android.material.textfield.TextInputLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/textSize"
                    android:layout_marginTop="2dp"
                    />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/etDate"
                    android:inputType="number"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:layout_marginTop="30dp"
                    android:text="Take Photo:" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_marginStart="20dp"
                    android:id="@+id/ibTakeVisitPhoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_camera_alt_24"
                    android:layout_marginTop="30dp"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivShowVisitImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivGetGps"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_add_location"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:text="Gps" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:text="Lat:"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:text="Long:"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:id="@+id/tvLatitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        tools:text="Latitude"
                        />
                    <TextView
                        android:id="@+id/tvLongitide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        tools:text="Longitude"

                        />
                </LinearLayout>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/textSize"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/des"
                    android:textSize="@dimen/textSize"
                    android:id="@+id/etTreeDescription"
                    android:inputType="textImeMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--                <Button-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="Send Later" />-->
                <Button
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:id="@+id/btVisitSubmit"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:textSize="@dimen/textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    />
                <Button
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:id="@+id/btUpdate"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:text="@string/update"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>