<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.VisitRegistration">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddVisits"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/CustomToolBarStyle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/textSize"
                    android:layout_marginTop="2dp"
                    />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/etDate"
                    android:inputType="number"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTreeStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTreeStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="@dimen/textSize"
                    />
                <Spinner
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:id="@+id/spTreeStatus"
                    android:layout_width="0dp"
                    android:textSize="@dimen/textSize"
                    android:layout_marginStart="2dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Age: "
                    android:textSize="@dimen/textSize"
                    android:layout_marginTop="2dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize"
                    android:text=""
                    android:id="@+id/tvAgeYears"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Years,"
                    android:textSize="@dimen/textSize"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize"
                    android:id="@+id/tvAgeMonths"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Months,"
                    android:textSize="@dimen/textSize"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize"
                    android:id="@+id/tvAgeDays"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Days"
                    android:textSize="@dimen/textSize"
                    />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:layout_marginTop="30dp"
                    android:text="Take Photo:" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_marginStart="20dp"
                    android:id="@+id/ibTakeVisitPhoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_camera_alt_24"
                    android:layout_marginTop="30dp"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivShowVisitImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    />


            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/textSize"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/des"
                    android:textSize="@dimen/textSize"
                    android:id="@+id/etTreeDescription"
                    android:inputType="textImeMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:id="@+id/btVisitSubmit"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:textSize="@dimen/textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    />
                <Button
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:id="@+id/btUpdate"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:text="@string/update"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>