<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_page"
    tools:context=".activities.HomePageActivity">

    <ImageView
        android:id="@+id/iv_sign_out"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="Fields"
        android:layout_gravity="center"
        android:src="@drawable/ic_nav_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="30sp"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:src="@drawable/homefur"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/vision"
                    android:textColor="#048709"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <FrameLayout
                android:id="@+id/flFields"
                android:layout_width="@dimen/frame_layout_width"
                android:layout_height="@dimen/frame_layout_height"
                android:background="@drawable/button_home"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="@dimen/frame_layout_icon_width"
                    android:layout_height="@dimen/frame_layout_icon_height"
                    android:contentDescription="Fields"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_fields"
                    />
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fields"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/home_page_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/flFields"
                app:layout_constraintStart_toStartOf="@id/flFields"
                app:layout_constraintTop_toBottomOf="@id/flFields"
                />




            <FrameLayout
                android:id="@+id/flMaps"
                android:layout_width="@dimen/frame_layout_width"
                android:layout_height="@dimen/frame_layout_height"
                android:background="@drawable/button_home"
                android:layout_gravity="center_horizontal"
                app:layout_constraintStart_toEndOf="@id/flFields"
                app:layout_constraintEnd_toStartOf="@id/flProfile"
                app:layout_constraintTop_toTopOf="parent"

                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/frame_layout_icon_width"
                    android:layout_height="@dimen/frame_layout_icon_height"
                    android:layout_gravity="center"
                    android:contentDescription="@string/maps"
                    android:src="@drawable/ic_location"
                    />
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/home_page_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/flMaps"
                app:layout_constraintStart_toStartOf="@id/flMaps"
                app:layout_constraintTop_toBottomOf="@id/flMaps"
                />
            <FrameLayout
                android:id="@+id/flProfile"
                android:layout_width="@dimen/frame_layout_width"
                android:layout_height="@dimen/frame_layout_height"
                android:background="@drawable/button_home"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="@dimen/frame_layout_icon_width"
                    android:layout_height="@dimen/frame_layout_icon_height"
                    android:contentDescription="Fields"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_person"
                    />
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/home_page_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/flProfile"
                app:layout_constraintStart_toStartOf="@id/flProfile"
                app:layout_constraintTop_toBottomOf="@id/flProfile"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>